fix header layout bug

--- a/style.css
+++ b/style.css
@@ -28,25 +28,26 @@ body {
 
 /* heading styles */
 #header {
-  height: 132px;
   display: flex;
   flex-direction: column;
+  padding-top: 10px;
 }
 .logo-title {
   height: 67%;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: center;
-  overflow: visible;
+  align-items: center;
 }
 .logo {
   height: 132px;
+  margin: 0 10px 0 10px;
 }
 h1 {
   font-size: 36px;
   font-weight: bold;
   text-align: center;
-  margin: 30px 0 20px 0;
+  margin: 10px;
 }
 h2 {
   text-align: center;
